--- a/.env.development.local
+++ b/.env.development.local
@@ -1,2 +1,5 @@
 #Port
 PORT=5500
+
+#Database
+DB_URI="mongodb+srv://stellar:stellar1@cluster0.l33rc.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0"
